Fixed collapse bug

--- a/react-app/src/components/CollapseContent/CollapseContent.css
+++ b/react-app/src/components/CollapseContent/CollapseContent.css
@@ -1,16 +1,24 @@
-.collapse-header {
+.collapse-header, .collapse-header-large {
   display: flex;
   align-items: center;
   align-self: start;
   justify-content: center;
 }
 
-.collapse-title {
+.collapse-header-large {
+  width: 100%;
+}
+
+.collapse-header-large i{
+  font-size: 28px;
+}
+
+.collapse-header h3 {
   font-size: 20px;
   margin-left: 5px;
 }
 
-.collapse-title-large {
+.collapse-header-large h3 {
   font-size: 40px;
   margin: 20px 5px;
 }
@@ -20,5 +28,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
+
